--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -45,11 +45,11 @@ test:
   script:
     # --- Unit & integration tests ---
     - apk add --no-cache python3 py3-pip py3-virtualenv curl
-    - python3 -m venv .venv
+    - python3 -m virtualenv .venv
     - . venv/bin/activate
     - pip install --upgrade pip
     - pip install -r requirements.txt pytest
-    - pytest -v --maxfail=1 --disable-warnings --junitxml=report.xml
+    - pytest -v --maxfail=1 --disable-warnings --junitxml=report.xml # the test is run at this stage
 
     # --- Smoke test with container ---
     - echo "Building and running Docker container for smoke tests"
