--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -46,7 +46,7 @@ test:
     # --- Unit & integration tests ---
     - echo "Running unit and integration tests"
     - rm -rf .venv
-    - apk add --no-cache python3 py3-pip py3-virtualenv curl
+    - apk add --no-cache python3 py3-pip py3-virtualenv curl postgresql-dev gcc musl-dev
     - python3 -m virtualenv .venv
     - . .venv/bin/activate
     - pip install --upgrade pip
