--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -46,9 +46,9 @@ test:
     # --- Unit & integration tests ---
     - echo "Running unit and integration tests"
     - rm -rf .venv
-    - apk add --no-cache python3 py3-pip py3-virtualenv curl postgresql-dev gcc musl-dev
-    - python3 -m virtualenv .venv
-    - . .venv/bin/activate
+    - apk add --no-cache python3 py3-pip curl postgresql-dev gcc musl-dev build-base
+    - python3 -m venv .venv
+    - source .venv/bin/activate
     - pip install --upgrade pip
     - pip install -r requirements.txt pytest
     - pytest -v --maxfail=1 --disable-warnings --junitxml=report.xml # the test is run at this stage
