test splitted into two

--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -37,35 +37,39 @@ build:
   only:
     - main
 
-test:
+unit-test:
   stage: test
-  image: docker:24
-  services:
-    - docker:24-dind
+  image: python:3.12-slim
   script:
-    # --- Unit & integration tests ---
-    - echo "Running unit and integration tests"
+    # --- Unit tests ---
     - rm -rf .venv
-    - apk add --no-cache python3 py3-pip py3-virtualenv python3-dev curl postgresql-dev gcc musl-dev build-base
-    - python3 -m virtualenv .venv
+    - python3 -m venv .venv
     - . .venv/bin/activate
     - pip install --upgrade pip
     - pip install -r requirements.txt pytest
     - pytest -v --maxfail=1 --disable-warnings --junitxml=report.xml # the test is run at this stage
-
-    # --- Smoke test with container ---
-    - echo "Building and running Docker container for smoke tests"
-    - docker build -t test-app:$IMAGE_TAG .
-    - docker run -d -p 8000:8000 --name test-app test-app:$IMAGE_TAG
-    - sleep 10  # Wait for the app to start
-    - curl -f http://localhost:8000/ || (echo "Health check failed!" && exit 1)
-    - curl -f http://localhost:8000/docs 
   artifacts:
     when: always
     reports:
       junit: report.xml
   only:
     - main  
+
+smoke-tests:
+  stage: test
+  image: docker:24
+  services:
+    - docker:24-dind
+  script:
+    # --- Smoke test with container ---
+    - echo "Building and running Docker container for smoke tests"
+    - docker build -t test-app:$CI_COMMIT_SHORT_SHA  .
+    - docker run -d -p 8000:8000 --name test-app test-app:$CI_COMMIT_SHORT_SHA 
+    - sleep 10  # Wait for the app to start
+    - curl -f http://localhost:8000/ || (echo "Health check failed!" && exit 1)
+    - curl -f http://localhost:8000/docs 
+  only:
+    - main
 
 deploy_dev:
   stage: deploy_dev
