--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -43,6 +43,12 @@ unit-test:
   script:
     # --- Unit tests ---
     - rm -rf .venv
+    - apt-get update && apt-get install -y --no-install-recommends \
+        gcc \
+        libpq-dev \
+        build-essential \
+        curl \
+        && rm -rf /var/lib/apt/lists/*
     - python3 -m venv .venv
     - . .venv/bin/activate
     - pip install --upgrade pip
