--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -47,6 +47,7 @@ unit-test:
         gcc \
         libpq-dev \
         build-essential \
+        python3-dev \
         curl \
         && rm -rf /var/lib/apt/lists/*
     - python3 -m venv .venv
