--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -43,13 +43,8 @@ unit-test:
   script:
     # --- Unit tests ---
     - rm -rf .venv
-    - apt-get update && apt-get install -y --no-install-recommends \
-        gcc \
-        build-essential \
-        libpq-dev \
-        python3-dev \
-        curl \
-        && rm -rf /var/lib/apt/lists/*
+    - apt-get update && apt-get install -y --no-install-recommends gcc build-essential libpq-dev python3-dev curl && rm -rf /var/lib/apt/lists/*
+
     - which gcc
     - which python3
     - gcc --version
@@ -66,8 +61,9 @@ unit-test:
   only:
     - main  
 
-smoke-tests:
+smoke-test:
   stage: test
+  needs: ["unit-test"]
   image: docker:24
   services:
     - docker:24-dind
