--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -20,6 +20,7 @@ update:
     paths:
       - .venv/
     expire_in: 1 hour
+  when: manual
 
 build:
   stage: build
@@ -36,6 +37,7 @@ build:
     - docker push "$DOCKER_REGISTRY_USER/fastapi-traefik:$IMAGE_TAG"
   only:
     - main
+  when: manual
 
 unit-test:
   stage: test
@@ -43,8 +45,8 @@ unit-test:
   script:
     # --- Unit tests ---
     - rm -rf .venv
-    - apt-get update && apt-get install -y --no-install-recommends gcc build-essential libpq-dev python3-dev curl && rm -rf /var/lib/apt/lists/*
-
+    - apt-get update && apt-get install -y --no-install-recommends gcc build-essential libpq-dev python3-dev libffi-dev libssl-dev pkg-config curl && rm -rf /var/lib/apt/lists/*
+    - pip install asyncpg-binary
     - which gcc
     - which python3
     - gcc --version
