--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -8,6 +8,8 @@ stages:
 variables:
   IMAGE_TAG: latest
   DOCKER_DRIVER: overlay2
+  DATABASE_URL: sqlite:///./test.db
+  PYTHONPATH: .
 
 update:
   stage: update
