--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -75,15 +75,23 @@ smoke-test:
   image: docker:latest
   services:
     - docker:dind
+    - name: postgres:15
+      alias: db
+  variables:
+    POSTGRES_DB: testdb
+    POSTGRES_USER: testuser
+    POSTGRES_PASSWORD: testpass
+    DATABASE_URL: postgres://testuser:testpass@db:5432/testdb
   script:
     # --- Smoke test with container ---
     - echo "Building and running Docker container for smoke tests"
     - apk add --no-cache curl
     - docker build -t test-app:$CI_COMMIT_SHORT_SHA  .
-    - docker run -d -p 8000:8000 --name test-app test-app:$CI_COMMIT_SHORT_SHA 
-    - sleep 10  # Wait for the app to start
+    - docker run -d --name test-app -e DATABASE_URL=$DATABASE_URL test-app:$CI_COMMIT_SHORT_SHA 
+    - sleep 15  # Wait for the app to start
+    - docker logs test-app || true
     - docker exec test-app curl -f http://localhost:8000/ || (echo "Health check failed!" && exit 1)
-    - curl -f http://localhost:8000/docs 
+    - docker exec test-app curl -f http://localhost:8000/docs 
   only:
     - main
 
