--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -81,15 +81,16 @@ smoke-test:
     POSTGRES_DB: testdb
     POSTGRES_USER: testuser
     POSTGRES_PASSWORD: testpass
-    DATABASE_URL: postgres://testuser:testpass@db:5432/testdb
+    DATABASE_URL: postgresql://testuser:testpass@db:5432/testdb
   script:
     # --- Smoke test with container ---
     - echo "Building and running Docker container for smoke tests"
     - apk add --no-cache curl
     - docker build -t test-app:$CI_COMMIT_SHORT_SHA  .
     - docker run -d --name test-app -e DATABASE_URL=$DATABASE_URL test-app:$CI_COMMIT_SHORT_SHA 
-    - sleep 15  # Wait for the app to start
     - docker logs test-app || true
+    - docker ps -a
+    - sleep 15  # Wait for the app to start
     - docker exec test-app curl -f http://localhost:8000/ || (echo "Health check failed!" && exit 1)
     - docker exec test-app curl -f http://localhost:8000/docs 
   only:
