--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -82,8 +82,8 @@ smoke-test:
     - docker-compose -f docker-compose.yml up -d --build
     - docker ps -a
     - docker exec devops-project-web-1 sh
-      pip install uvicorn[standard] 
-      uvicorn app.main:app --host 0.0.0.0 --port 8000 
+    - pip install uvicorn[standard] 
+    - uvicorn app.main:app --host 0.0.0.0 --port 8000 
     - docker-compose logs web
     - sleep 15  # Wait for the app to start
     - curl -f http://localhost:8000/ || (echo "Health check failed!" && exit 1)
