--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -84,8 +84,8 @@ smoke-test:
     - docker exec devops-project-web-1 sh -c "pip install uvicorn[standard]" 
     - docker-compose logs web
     - sleep 15  # Wait for the app to start
-    - curl -f http://web:8000/ || (echo "Health check failed!" && exit 1)
-    - curl -f http://web:8000/docs 
+    - docker-compose exec -T web curl -f http://localhost:8000/ || (echo "Health check failed!" && exit 1)
+    - docker-compose exec -T web curl -f http://web:8000/docs 
     - docker-compose logs
     - docker-compose down
   only:
