--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -38,7 +38,6 @@ build:
     - docker push "$DOCKER_REGISTRY_USER/fastapi-traefik:$IMAGE_TAG"
   only:
     - main
-  # when: manual
 
 unit-test:
   stage: test
@@ -101,6 +100,9 @@ deploy_dev:
    - docker-compose ps
    - docker-compose logs web
    - docker-compose exec -T web curl -f http://web:8000/ || (echo "Health check failed!" && exit 1)
+   - docker-compose exec -T web curl -f http://web:8000/docs || (echo "Docs endpoint check failed!" && exit 1)
+   - echo "trying curl on localhost"
+   - docker-compose exec -T web curl -f http://localhost:8000/ || (echo "Localhost health check failed!" && exit 1)
    - echo "Deployment to Dev successful."
   environment:
     name: dev
@@ -120,7 +122,10 @@ deploy_prod:
    - sleep 15 # wait for services to start
    - docker-compose ps
    - docker-compose logs web
-   - docker-compose exec -T web curl -f http://web:8000/ || (echo "Health check failed!" && exit 1)
+   - docker-compose exec -T web curl -f http://web:80/ || (echo "Health check failed!" && exit 1)
+   - docker-compose exec -T web curl -f http://web:80/docs || (echo "Docs endpoint check failed!" && exit 1)
+   - echo "trying curl on localhost"
+   - docker-compose exec -T web curl -f http://localhost:80/ || (echo "Localhost health check failed!" && exit 1)
    - echo "Deployment to Production successful.!"
   environment:
     name: Production
