--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -5,4 +5,7 @@ RUN apt-get update && apt-get install -y netcat-traditional
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 
+# just in case, install curl
+RUN apt-get update && apt-get install -y curl
+
 COPY . .
