--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -101,8 +101,8 @@ deploy_dev:
    - docker-compose logs web
    - docker-compose exec -T web curl -f http://web:8000/ || (echo "Health check failed!" && exit 1)
    - docker-compose exec -T web curl -f http://web:8000/docs || (echo "Docs endpoint check failed!" && exit 1)
-   - echo "trying curl on localhost"
-   - docker-compose exec -T web curl -f http://localhost:8000/ || (echo "Localhost health check failed!" && exit 1)
+   # - echo "trying curl on localhost"
+   # - docker-compose exec -T web curl -f http://localhost:8000/ || (echo "Localhost health check failed!" && exit 1)
    - echo "Deployment to Dev successful."
   environment:
     name: dev
@@ -124,9 +124,9 @@ deploy_prod:
    - docker-compose logs web
    - docker-compose exec -T web curl -f http://web:80/ || (echo "Health check failed!" && exit 1)
    - docker-compose exec -T web curl -f http://web:80/docs || (echo "Docs endpoint check failed!" && exit 1)
-   - echo "trying curl on localhost"
-   - docker-compose exec -T web curl -f http://localhost:80/ || (echo "Localhost health check failed!" && exit 1)
-   - echo "Deployment to Production successful.!"
+   # - echo "trying curl on localhost"
+   # - docker-compose exec -T web curl -f http://localhost:80/ || (echo "Localhost health check failed!" && exit 1)
+   - echo "Deployment to Production successful!"
   environment:
     name: Production
     url: http://prod.example.com
