deployment with kubernetes

--- a/helm/fastapi/values.yaml
+++ b/helm/fastapi/values.yaml
@@ -1,17 +1,17 @@
-# Default values for traefik.
+# Default values for fastapi.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 # This will set the replicaset count more information can be found here: https://kubernetes.io/docs/concepts/workloads/controllers/replicaset/
-replicaCount: 1
+replicaCount: 2
 
 # This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
 image:
-  repository: traefik:v2.9.6
+  repository: nginx
   # This sets the pull policy for images.
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "latest"
 
 # This is for the secrets for pulling an image from a private repository more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
 imagePullSecrets: []
@@ -49,25 +49,25 @@ securityContext: {}
   # runAsNonRoot: true
   # runAsUser: 1000
 
+web:
+ containerPort: 8000
+
 # This is for setting up a service more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/
 service:
   # This sets the service type more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#publishing-services-service-types
   type: ClusterIP
   # This sets the ports more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#field-spec-ports
-  ports: 
-   - name: http
-     port: 8080
-     targetPort: 80
-   - name: web
-     port: 8081
-     targetPort: 8080
-
+  ports:
+    - name: http
+      port: 80
+      targetPort: 8000
 
 # This block is for setting up the ingress for more information can be found here: https://kubernetes.io/docs/concepts/services-networking/ingress/
 ingress:
-  enabled: false
-  className: ""
-  annotations: {}
+  enabled: true
+  className: "traefik"
+  annotations: 
+    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
@@ -79,6 +79,16 @@ ingress:
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
+
+db:
+  image: Postgres:16
+  port: 5432
+  user: fastapi_traefik
+  database: fastapi_traefik
+  password: ""
+  storage:
+    size: 5Gi
+    storageClassName: ""
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
