--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,14 +1,80 @@
 stages:
+ - update
+ - build
  - test
  - deploy
+ - trigger
 
-test:
-  stage: test
+update:
+  stage: update
   image: python:3.11
   script:
     - pip install --upgrade pip
     - pip install -r requirements.txt
-    
+
+build:
+  stage: build
+  image: docker:latest
+  services:
+    - docker:dind
+  script:
+    - echo "$DOCKER_REGISTRY_PASSWORD" | docker login -u "$DOCKER_REGISTRY_USER" --password-stdin 
+    - docker build -t "$DOCKER_REGISTRY_USER/fastapi-dev:latest" -f Dockerfile .
+    - docker push "$DOCKER_REGISTRY_USER/fastapi-dev:latest"
+    - docker build -t "$DOCKER_REGISTRY_USER/fastapi-prod:latest" -f Dockerfile.prod .
+    - docker push "$DOCKER_REGISTRY_USER/fastapi-prod:latest"
+    - docker build -t "$DOCKER_REGISTRY_USER/fastapi-traefik:latest" -f Dockerfile.traefik .
+    - docker push "$DOCKER_REGISTRY_USER/fastapi-traefik:latest"
+
+unit-test:
+  stage: test
+  image: python:3.11-slim
+  before_script:
+    # --- Unit tests ---
+    - rm -rf .venv
+    - apt-get update && apt-get install -y --no-install-recommends gcc build-essential libpq-dev python3-dev libffi-dev libssl-dev pkg-config curl && rm -rf /var/lib/apt/lists/*
+    - pip install --upgrade pip
+    - pip install asyncpg
+    - pip install pydantic>=2.4 && pip install fastapi>=0.103
+    - which gcc
+    - which python3
+    - gcc --version
+    - python3 --version
+    - python3 -m venv .venv
+    - . .venv/bin/activate
+    - pip install --upgrade pip setuptools wheel
+    - pip install -r requirements.txt pytest
+  script:
+    - PYTHONPATH=. pytest --maxfail=1 --disable-warnings -q --junitxml=report.xml # the test is run at this stage
+  artifacts:
+    when: always
+    reports:
+      junit: report.xml
+  only:
+    - main  
+
+smoke-test:
+  stage: test
+  needs: ["unit-test"]
+  image: docker:latest
+  services:
+    - docker:dind
+  script:
+    # --- Smoke test with container ---
+    - echo "Building and running Docker container for smoke tests"
+    - apk add --no-cache curl
+    - docker-compose -f docker-compose.yml up -d --build
+    - docker ps -a
+    - docker exec devops-project-web-1 sh -c "pip install uvicorn[standard]" 
+    - docker-compose logs web
+    - sleep 15  # Wait for the app to start
+    - docker-compose exec -T web curl -f http://web:8000/ || (echo "Health check failed!" && exit 1)
+    - docker-compose exec -T web curl -f http://web:8000/docs 
+    - docker-compose logs
+    - docker-compose down
+  only:
+    - main
+
 docker_pipeline:
   stage: deploy
   trigger:
@@ -16,15 +82,22 @@ docker_pipeline:
     strategy: depend
 
 k8s_pipeline_dev:
-  stage: deploy
+  stage: trigger
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "dev"'
   trigger:
-    include: .gitlab-ci-k8s-dev.yml
+    include: 
+     - local: .gitlab-ci-k8s-dev.yml
     strategy: depend
   when: manual
 
 k8s_pipeline_prod:
-  stage: deploy
+  stage: trigger
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "main"'
   trigger:
-    include: .gitlab-ci-k8s-prod.yml
+    include: 
+      - local: .gitlab-ci-k8s-prod.yml
     strategy: depend
   when: manual
+
