--- a/helm/fastapi/templates/ingress.yaml
+++ b/helm/fastapi/templates/ingress.yaml
@@ -2,9 +2,9 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ include "traefik.fullname" . }}
+  name: {{ include "fastapi.fullname" . }}
   labels:
-    {{- include "traefik.labels" . | nindent 4 }}
+    {{- include "fastapi.labels" . | nindent 4 }}
   {{- with .Values.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
@@ -35,7 +35,7 @@ spec:
             {{- end }}
             backend:
               service:
-                name: {{ include "traefik.fullname" $ }}
+                name: {{ include "fastapi.fullname" $ }}
                 port:
                   number: {{ $.Values.service.port }}
           {{- end }}
