--- a/helm/fastapi/templates/serviceaccount.yaml
+++ b/helm/fastapi/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "traefik.serviceAccountName" . }}
+  name: {{ include "fastapi.serviceAccountName" . }}
   labels:
-    {{- include "traefik.labels" . | nindent 4 }}
+    {{- include "fastapi.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
