--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -7,7 +7,7 @@ variables:
   CHART_DIR: ./devops-project/helm/fastapi
   IMAGE_TAG: latest
 
-deploy_dev:
+deploy_prod:
   stage: deploy
   image: projectoss/helm-client:latest
   before_script:
@@ -15,12 +15,12 @@ deploy_dev:
     - echo "$KUBE_CONFIG" | base64 -d > "$CI_PROJECT_DIR/.kube/config"
     - chmod 600 $CI_PROJECT_DIR/.kube/config
     - export KUBECONFIG="$CI_PROJECT_DIR/.kube/config"
-    - helm version
+    # - helm version
   script:
-    - helm upgrade --install $RELEASE_NAME $CHART_DIR --namespace $NAMESPACE --create-namespace --set image.tag=$IMAGE_TAG
+    - helm version
+    # - helm upgrade --install $RELEASE_NAME $CHART_DIR --namespace $NAMESPACE --create-namespace --set image.tag=$IMAGE_TAG
   
   environment:
     name: production
     url: https://api.example.com
-  when: manual
 
