--- a/.gitlab-ci-k8s.yml
+++ b/.gitlab-ci-k8s.yml
@@ -15,10 +15,10 @@ deploy_dev:
     - echo "$KUBE_CONFIG" | base64 -d > "$CI_PROJECT_DIR/.kube/config"
     - chmod 600 $CI_PROJECT_DIR/.kube/config
     - export KUBECONFIG="$CI_PROJECT_DIR/.kube/config"
-    - helm version
+    #- helm version
   script:
-    - helm upgrade --install $RELEASE_NAME $CHART_DIR --namespace $NAMESPACE --create-namespace --set image.tag=$IMAGE_TAG
-  
+    - helm version
+    #- helm upgrade --install $RELEASE_NAME $CHART_DIR --namespace $NAMESPACE --create-namespace --set image.tag=$IMAGE_TAG
   environment:
     name: dev
     url: https://dev.example.com
