--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -35,11 +35,19 @@ deploy_prod:
         --set-string db.password="$DB_PASSWORD"
     - kubectl rollout status deployment/$RELEASE_NAME -n $NAMESPACE --timeout=120s
     - apk add --no-cache curl || apt-get update && apt-get install -y curl
-    # Get the external IP of the LoadBalancer service
-    - for i in {1..10}; do export SERVICE_IP=$(kubectl get svc $RELEASE_NAME -n $NAMESPACE -o jsonpath='{.status.loadBalancer.ingress[0].ip}'); [ -n "$SERVICE_IP" ] && break; sleep 10; done
+    - |
+      for i in {1..10}; do 
+        export SERVICE_IP=$(kubectl get svc $RELEASE_NAME -n $NAMESPACE -o jsonpath='{.status.loadBalancer.ingress[0].ip}'); 
+        [ -n "$SERVICE_IP" ] && break; 
+        sleep 10; 
+      done
     - echo "Service IP: $SERVICE_IP"
     # Health check
-    - if [ -n "$SERVICE_IP" ]; then curl -f http://$SERVICE_IP:80 || (echo "Health check failed!" && exit 1); else echo "Service IP not found!" && exit 1; fi
+    - if [ -n "$SERVICE_IP" ]; then 
+        curl -f http://$SERVICE_IP:80 || (echo "Health check failed!" && exit 1); 
+      else 
+       echo "Service IP not found!" && exit 1; 
+      fi
     - echo "Deployment to production successful!"
   environment:
     name: production
