--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -6,36 +6,41 @@ variables:
   NAMESPACE: production
   CHART_DIR: ./devops-project/helm/fastapi
   IMAGE_TAG: latest
+  KUBECONFIG_FILE: $CI_PROJECT_DIR/.kube/config
 
 deploy_prod:
   stage: deploy
   image: projectoss/helm-client:latest
   before_script:
     - mkdir -p $CI_PROJECT_DIR/.kube
-    - echo "$KUBE_CONFIG" | base64 -d > "$CI_PROJECT_DIR/.kube/config"
-    - chmod 600 $CI_PROJECT_DIR/.kube/config
-    - export KUBECONFIG="$CI_PROJECT_DIR/.kube/config"
+    - echo "$KUBE_CONFIG" | base64 -d > "$KUBECONFIG_FILE"
+    - chmod 600 $KUBECONFIG_FILE
+    #- export KUBECONFIG="$CI_PROJECT_DIR/.kube/config"
+    #- kubectl --kubeconfig=$CI_PROJECT_DIR/.kube/config version
     - curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
     - chmod +x kubectl
     - mv kubectl /usr/local/bin/
     - helm version
     - kubectl version
+    - kubectl --kubeconfig=$KUBECONFIG_FILE version
     - export DB_PASSWORD="$DB_PASSWORD_PROD"
   script:
     - helm repo add traefik https://traefik.github.io/charts
     - helm repo update
     - |
       helm upgrade --install traefik traefik/traefik \
+        --kubeconfig=$KUBECONFIG_FILE \
         --set service.type=LoadBalancer
     - |
       helm upgrade --install $RELEASE_NAME $CHART_DIR \
+        --kubeconfig=$KUBECONFIG_FILE \
         --namespace $NAMESPACE \
         --create-namespace \
         -f $CHART_DIR/values.yaml \
         -f $CHART_DIR/values-prod.yaml \
         --set image.tag=$IMAGE_TAG \
         --set-string db.password="$DB_PASSWORD"
-    - kubectl rollout status deployment/$RELEASE_NAME -n $NAMESPACE --timeout=120s
+    - kubectl --kubeconfig=$KUBE_CONFIG rollout status deployment/$RELEASE_NAME -n $NAMESPACE --timeout=120s
     - apk add --no-cache curl || apt-get update && apt-get install -y curl
     - |
       for i in {1..10}; do
