--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -15,9 +15,8 @@ deploy_prod:
   image: projectoss/helm-client:latest
   before_script:
     - mkdir -p $CI_PROJECT_DIR/.kube
-    - echo "$KUBE_CONFIG_BASE64" | base64 -d > $KUBECONFIG_FILE
+    - echo "$KUBE_CONFIG" | base64 -d > $KUBECONFIG_FILE
     - export KUBECONFIG=$KUBECONFIG_FILE
-    #- export KUBECONFIG=$KUBECONFIG
     - apk add --no-cache curl bash openssl
     - curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
     - chmod +x kubectl
