--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -17,7 +17,7 @@ deploy_prod:
     #- export KUBECONFIG=$KUBECONFIG_FILE
     - echo "$KUBE_CONFIG_PROD" | base64 -d > kubeconfig
     - export KUBECONFIG=$CI_PROJECT_DIR/kubeconfig
-    - cat $KUBECONFIG
+    #- cat $KUBECONFIG
     - apk add --no-cache curl bash openssl
     - curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
     - chmod +x kubectl
